<resources>
    <string name="app_name">VXST</string>
    <string name="text_login">Login</string>
    <string name="text_get_start">Get Start</string>
    <string name="text_enter_email">Enter Email Address</string>
    <string name="text_enter_password">Enter Password</string>
    <string name="text_forgot_password">Forgot Password ?</string>
    <string name="login_button">Login</string>
    <string name="text_enter_phone">Enter Phone Number</string>
    <string name="button_signup">Sing Up</string>
    <string name="text_welcome">Hi, Anne Folake</string>
    <string name="text_greeting">Welcome</string>
    <string name="text_primary_account">Primary Account</string>
    <string name="text_available_account">Available Account</string>
    <string name="account_balance">N25,000,000</string>
    <string name="button_fund_account">Fund Account</string>
    <string name="text_recent_transaction">Recent Transaction</string>
    <string name="text_deposit">Deposit</string>
    <string name="text_withdrawal">Withdrawal</string>
    <string name="hint_date">February 21, 2024</string>
    <string name="text_invite_friends">Invite Your Friends</string>
    <string name="text_invite_friends_desc">Invite Your Friends With The Spark Code</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="Debet_transfer">Debit Card</string>
    <string name="destination_account">Destination Account</string>
    <string name="account_number">Account Number : 009459284</string>
    <string name="account_name">Account : Marcy Tracy</string>
    <string name="destination_bank">Destination Account : Kuda Bank</string>
    <string name="copy_account_number">Copy Account Number</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="use_existing_card">Use Existing Card [1234 **** ** ****0956]</string>
    <string name="add_another_card">Add Another Card</string>
    <string name="fund_account">Fund Account</string>
    <string name="account_funded_successfully">Account Funded Successfully !</string>
    <string name="button_invest">Invest</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="transaction_date_hint">Transaction Date : 21/ 02/ 2024    16:03</string>
    <string name="transaction_status">Transaction Status : Successful</string>
    <string name="amount_in_words">Amount In Words: Thirty Four Thousand Naira Only</string>
    <string name="transaction_type">Transaction Type : Withdrawal</string>
    <string name="amount">Amount : N34,000</string>
    <string name="transaction_remark">Transaction Remark : For Netflix</string>
    <string name="button_done">Done</string>
    <string name="cash">Cash</string>
    <string name="assets">Assets</string>
    <string name="stock_portfolio">Stock Portfolio</string>
    <string name="paystack">Paystack</string>
    <string name="search_hint">Search</string>
    <string name="top_stocks_to_invest">Top Stocks To Invest In</string>
    <string name="proceed">Proceed</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="invest">Invest</string>
    <string name="minimum_interest">Minimum Interest : 7.2%</string>
</resources>