<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="0dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="170dp"
            android:paddingTop="100dp"
            android:paddingBottom="20dp"
            android:text="VXST"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/Surface"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:text="@string/text_enter_email"
            android:textColor="@color/Surface"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="317dp"
            android:layout_height="42dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/edittext_border"
            android:backgroundTint="@color/your_background_color"
            android:ems="10"
            android:hint="@string/text_enter_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="0dp"
            android:textColor="@color/Surface" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="0dp"
            android:text="@string/text_enter_password"
            android:textColor="@color/Surface"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="314dp"
            android:layout_height="39dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/edittext_border"
            android:backgroundTint="@color/your_background_color"
            android:ems="10"
            android:hint="@string/text_enter_password"
            android:inputType="textEmailAddress"
            android:paddingLeft="0dp"
            android:textColor="@color/Surface" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="0dp"
            android:text="@string/text_forgot_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/LoginBtn"
            style="@android:style/Widget.Button"
            android:layout_width="258dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"

            android:background="@drawable/button_background"
            android:includeFontPadding="true"
            android:paddingLeft="0dp"
            android:text="@string/login_button"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>